Annotation + String updates